<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ButtonFragment"
    android:orientation="vertical">

    <Button android:id="@+id/btnBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/black" />

    <Button android:id="@+id/btnBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blue" />

    <Button android:id="@+id/btnGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/green" />

    <Button android:id="@+id/btnRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/red" />

    <Button android:id="@+id/btnYellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yellow" />

</LinearLayout>